--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/editTaka"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:gravity="right|center"
+                android:inputType="textPersonName"
+                android:text="0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/val1"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="1"
+                tools:layout_editor_absoluteX="73dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/val2"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="2"
+                tools:layout_editor_absoluteX="3dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/val3"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="3"
+                tools:layout_editor_absoluteX="143dp"
+                tools:layout_editor_absoluteY="47dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/val4"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="4"
+                tools:layout_editor_absoluteX="73dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/val5"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="5"
+                tools:layout_editor_absoluteX="3dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/val6"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="6"
+                tools:layout_editor_absoluteX="143dp"
+                tools:layout_editor_absoluteY="47dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/val7"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="7"
+                tools:layout_editor_absoluteX="73dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/val8"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="8"
+                tools:layout_editor_absoluteX="3dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/val9"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="9"
+                tools:layout_editor_absoluteX="143dp"
+                tools:layout_editor_absoluteY="47dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/val0"
+                android:onClick="NumberInputEvent"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="1"
+                android:backgroundTint="@color/gray"
+                android:text="0"
+                tools:layout_editor_absoluteX="73dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+            <Button
+                android:id="@+id/calculate"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:layout_marginRight="1pt"
+                android:layout_weight="3"
+                android:backgroundTint="@color/green"
+                android:text="Calculate"
+                tools:layout_editor_absoluteX="3dp"
+                tools:layout_editor_absoluteY="47dp" />
+
+        </TableRow>
+
+    </TableLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
