--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="5pt"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -11,6 +12,8 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/resultTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -18,19 +21,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/clearField"
+                android:layout_width="38dp"
+                android:layout_height="match_parent"
+                android:layout_margin="3pt"
+                android:backgroundTint="@color/black"
+                android:gravity="center|center"
+                android:onClick="ClearField"
+                android:text="X"
+                android:textSize="10pt"
+                android:visibility="gone" />
+
             <EditText
                 android:id="@+id/editTaka"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="10"
                 android:ems="10"
                 android:gravity="right|center"
                 android:inputType="textPersonName"
                 android:text="0"
+                android:textSize="30pt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+
         </TableRow>
 
         <TableRow
@@ -39,36 +57,36 @@
 
             <Button
                 android:id="@+id/val1"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="1"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="47dp" />
 
             <Button
                 android:id="@+id/val2"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="2"
                 tools:layout_editor_absoluteX="3dp"
                 tools:layout_editor_absoluteY="47dp" />
 
             <Button
                 android:id="@+id/val3"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="3"
                 tools:layout_editor_absoluteX="143dp"
                 tools:layout_editor_absoluteY="47dp" />
@@ -80,36 +98,36 @@
 
             <Button
                 android:id="@+id/val4"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="4"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="47dp" />
 
             <Button
                 android:id="@+id/val5"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="5"
                 tools:layout_editor_absoluteX="3dp"
                 tools:layout_editor_absoluteY="47dp" />
 
             <Button
                 android:id="@+id/val6"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="6"
                 tools:layout_editor_absoluteX="143dp"
                 tools:layout_editor_absoluteY="47dp" />
@@ -121,36 +139,36 @@
 
             <Button
                 android:id="@+id/val7"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="7"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="47dp" />
 
             <Button
                 android:id="@+id/val8"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="8"
                 tools:layout_editor_absoluteX="3dp"
                 tools:layout_editor_absoluteY="47dp" />
 
             <Button
                 android:id="@+id/val9"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="9"
                 tools:layout_editor_absoluteX="143dp"
                 tools:layout_editor_absoluteY="47dp" />
@@ -162,12 +180,12 @@
 
             <Button
                 android:id="@+id/val0"
-                android:onClick="NumberInputEvent"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
+                android:onClick="NumberInputEvent"
                 android:text="0"
                 tools:layout_editor_absoluteX="73dp"
                 tools:layout_editor_absoluteY="47dp" />
@@ -177,8 +195,10 @@
                 android:layout_width="30pt"
                 android:layout_height="30pt"
                 android:layout_marginRight="1pt"
+                android:enabled="false"
                 android:layout_weight="3"
                 android:backgroundTint="@color/green"
+                android:onClick="CalculateVangti"
                 android:text="Calculate"
                 tools:layout_editor_absoluteX="3dp"
                 tools:layout_editor_absoluteY="47dp" />
@@ -186,4 +206,49 @@
         </TableRow>
 
     </TableLayout>
+
+    <TextView
+        android:id="@+id/resultTitle"
+        android:layout_width="match_parent"
+        android:layout_height="12pt"
+        android:layout_marginBottom="133dp"
+        android:gravity="center"
+        android:text="@string/result_title"
+        android:textColor="@color/blue"
+        android:textSize="10pt"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/resultView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Hey there"
+        android:textColor="@color/black"
+        android:textSize="7pt"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultTitle" />
+
+    <Button
+        android:id="@+id/resetBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="84dp"
+        android:backgroundTint="@color/red"
+        android:onClick="ResetEverything"
+        android:text="Reset"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
