--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,11 +10,12 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="299dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/resultTitle"
-        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
@@ -42,7 +43,7 @@
                 android:gravity="right|center"
                 android:inputType="textPersonName"
                 android:text=""
-                android:textSize="30pt"
+                android:textSize="25pt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +58,8 @@
 
             <Button
                 android:id="@+id/val1"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -69,8 +70,8 @@
 
             <Button
                 android:id="@+id/val2"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -81,8 +82,8 @@
 
             <Button
                 android:id="@+id/val3"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -98,8 +99,8 @@
 
             <Button
                 android:id="@+id/val4"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -110,8 +111,8 @@
 
             <Button
                 android:id="@+id/val5"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -122,8 +123,8 @@
 
             <Button
                 android:id="@+id/val6"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -139,8 +140,8 @@
 
             <Button
                 android:id="@+id/val7"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -151,8 +152,8 @@
 
             <Button
                 android:id="@+id/val8"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -163,8 +164,8 @@
 
             <Button
                 android:id="@+id/val9"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -180,8 +181,8 @@
 
             <Button
                 android:id="@+id/val0"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
@@ -192,12 +193,12 @@
 
             <Button
                 android:id="@+id/calculate"
-                android:layout_width="@dimen/numeric_button_width_potrait"
-                android:layout_height="@dimen/numeric_button_height_potrait"
+                android:layout_width="30pt"
+                android:layout_height="20pt"
                 android:layout_marginRight="1pt"
-                android:enabled="false"
                 android:layout_weight="3"
                 android:backgroundTint="@color/green"
+                android:enabled="false"
                 android:onClick="CalculateVangti"
                 android:text="@string/calculate_button"
                 tools:layout_editor_absoluteX="3dp"
@@ -209,30 +210,29 @@
 
     <TextView
         android:id="@+id/resultTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="12pt"
-        android:layout_marginBottom="133dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="76dp"
         android:gravity="center"
         android:text="@string/result_title"
         android:textColor="@color/blue"
         android:textSize="10pt"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/resultView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
         android:layout_weight="1"
         android:text=""
         android:textColor="@color/black"
         android:textSize="7pt"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultTitle" />
 
@@ -240,14 +240,13 @@
         android:id="@+id/resetBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="84dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/red"
         android:onClick="ResetEverything"
         android:text="@string/reset_title"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
